# MinimalSDL2ImageDemo

./: .gitignore  CMakeLists.txt  CMakeSettings.json  makefile
cmake/: FindSDL2_image.cmake
res/: toolchain.cmake
src/: main.cpp
